tests/idris2/error/perror032/LambdaImpossible.idr
foo : 2 = 3 -> Void
foo = (\Refl impossible)
